kubernetes/apps/gmao/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmao-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gmao-backend
  template:
    metadata:
      labels:
        app: gmao-backend
    spec:
      containers:
      - name: gmao-backend
        image: ghcr.io/youssefag1337/gmao-backend:a0527cabcd5f09addd3e5ffb337f5f44d4ba413e
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
