kubernetes/apps/gmao/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmao-backend-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: gmao-backend
