kubernetes/apps/gmao/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmao-frontend-service
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: gmao-frontend
